--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": { 
+  "devDependencies": {
+    "sass": "^1.86.1",
     "sharp": "^0.33.5",
     "svgo": "^3.3.2",
     "vite": "^6.2.0",
